[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "n2k2ip"
description = "Bridge an NMEA 2000 (SocketCAN) bus to TCP clients as Yacht Devices RAW (YDRAW)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ghotihook" }]
keywords = ["nmea2000", "nmea", "socketcan", "can", "ydraw", "yacht", "marine", "gateway"]
dynamic = ["version"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/ghotihook/n2k2ip"
Repository = "https://github.com/ghotihook/n2k2ip"
Issues = "https://github.com/ghotihook/n2k2ip/issues"

[project.scripts]
n2k2ip = "n2k2ip:main"

[tool.setuptools]
py-modules = ["n2k2ip"]

[tool.setuptools.dynamic]
version = { attr = "n2k2ip.__version__" }
